# karbeat

./: .gitignore  README.md  flutter_rust_bridge.yaml  karbeat.code-workspace  pubspec.yaml  script.py
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
karbeat-macros/src/: lib.rs
karbeat_macros/: Cargo.toml
lib/: app.dart  main.dart
lib/features/: main_screen.dart
lib/features/audio_plugins/: dynamic_plugin_screen.dart
lib/features/audio_plugins/effects/: abstract_effect_screen.dart  effect_registry.dart  karbeat_parametric_eq.dart
lib/features/audio_plugins/generators/: abstract_generator_screen.dart  karbeatzer_screen.dart  my_retro_synth.dart  synth_registry.dart
lib/features/components/: context_menu.dart  fine_grained_input.dart  floating_midi_keyboard.dart  interaction_panel.dart  midi_drawer.dart  plugin_parameter_widget.dart  scrollable_virtual_keyboard.dart  track_drawer.dart  virtual_keyboard.dart  waveform_painter.dart
lib/features/header/: control_panel.dart  new_control_panel.dart
lib/features/layout/: main_content.dart
lib/features/playlist/: clip_drag_controller.dart  playhead.dart  track_container.dart  track_slot.dart
lib/features/plugins/: dynamic_plugin_screen.dart  karbeatzer_screen.dart
lib/features/screens/: audio_properties_screen.dart  main_screen.dart  mixer_screen.dart  piano_roll_screen.dart  source_list_screen.dart  track_list_screen.dart
lib/features/side_panel/: side_panel.dart  sidebar.dart
lib/models/: grid.dart  interaction_target.dart  menu_group.dart  piano_key.dart
lib/services/: audio_waveform_service.dart  clip_service.dart  prelude.dart  serializer_service.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/rust/api/: audio.dart  (+12 more)
lib/state/: app_state.dart  clip_placement_state.dart
lib/utils/: color.dart  formatter.dart  helper_data_structure.dart  logger.dart  result_type.dart  scroll_behavior.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  errors.txt
rust/karbeat-core/: Cargo.toml
rust/karbeat-core/src/: commands.rs  context.rs  lib.rs  lock.rs  plugin_types.rs  utils.rs
rust/karbeat-core/src/api/: audio_api.rs  audio_waveform_api.rs  automation_api.rs  clip.rs  clip_api.rs  clipboard_api.rs  mixer_api.rs  mod.rs  note.rs  note_api.rs  pattern_api.rs  plugin_api.rs  project_api.rs  track_api.rs  transport_api.rs
rust/karbeat-core/src/audio/: backend.rs  engine.rs  event.rs  exporter.rs  mod.rs  render_state.rs
rust/karbeat-core/src/audio/writer/: mod.rs  wav.rs
rust/karbeat-core/src/core/: history.rs  mod.rs
rust/karbeat-core/src/core/file_manager/: audio_loader.rs  loader.rs  mod.rs  project_loader.rs
rust/karbeat-core/src/core/project/: automation.rs  clip.rs  clipboard.rs  generator.rs  index.rs  mixer.rs  mod.rs  transport.rs
rust/karbeat-core/src/core/project/plugin/: instance.rs  mod.rs
rust/karbeat-core/src/core/project/track/: audio_waveform.rs  midi.rs  mod.rs  track.rs
rust/karbeat-core/src/shared/: enums.rs  id.rs  mod.rs
rust/karbeat-dsp/: Cargo.toml  README.md
rust/karbeat-dsp/src/: envelope.rs  filter.rs  interpolation.rs  lib.rs  oscillator.rs  prelude.rs  windowing.rs
rust/karbeat-flutter-ffi/: Cargo.toml
rust/karbeat-flutter-ffi/src/: frb_generated.rs  lib.rs
rust/karbeat-flutter-ffi/src/api/: audio.rs  mixer.rs  mod.rs  pattern.rs  plugin.rs  project.rs  serialization.rs  session.rs  simple.rs  track.rs  transport.rs
rust/karbeat-flutter-ffi/src/api/plugins/: eq.rs
rust/karbeat-host/: Cargo.toml
rust/karbeat-macros/: Cargo.toml
rust/karbeat-macros/src/: lib.rs
rust/karbeat-plugin-api/: Cargo.toml  README.md
rust/karbeat-plugin-api/src/: effect_base.rs  lib.rs  macros.rs  prelude.rs  synth_base.rs  traits.rs  wrapper.rs
rust/karbeat-plugin-types/: Cargo.toml
rust/karbeat-plugin-types/src/: lib.rs  parameter.rs
rust/karbeat-plugins/: Cargo.toml
rust/karbeat-plugins/src/: lib.rs  registry.rs
rust/karbeat-plugins/src/effect/: compressor.rs  parametric_eq.rs
rust/karbeat-plugins/src/generator/: karbeatzer_v2.rs  mod.rs  my_retro.rs
rust/karbeat-utils/: Cargo.toml
rust/karbeat-utils/src/: audio_utils.rs  color.rs  lib.rs  macros.rs  math.rs  parser.rs
rust/src/: commands.rs  context.rs  frb_generated.rs  lib.rs
rust/src/api/: audio.rs  mixer.rs  mod.rs  pattern.rs  plugin.rs  project.rs  session.rs  simple.rs  track.rs  transport.rs
rust/src/api/commands/: mod.rs
rust/src/api/network/: mod.rs
rust/src/audio/: backend.rs  engine.rs  event.rs  mod.rs  render_state.rs
rust/src/core/: history.rs  mod.rs
rust/src/core/engine/: audio_engine.rs  mod.rs
rust/src/core/file_manager/: loader.rs
rust/src/core/plugin/: mod.rs
rust/src/core/project/: automation.rs  clip.rs  clipboard.rs  generator.rs  mixer.rs  mod.rs  transport.rs
rust/src/core/project/plugin/: instance.rs  mod.rs
rust/src/core/project/track/: audio_waveform.rs  automation.rs  midi.rs  mod.rs
rust/src/core/track/: audio_waveform.rs  midi.rs  mod.rs
rust/src/plugin/: automation.rs  effect_base.rs  mod.rs  registry.rs  synth_base.rs  wrapper.rs
rust/src/plugin/effect/: compressor.rs  mod.rs  parametric_eq.rs
rust/src/plugin/generator/: factory.rs  karbeatzer.rs  karbeatzer_v2.rs  karbeatzer_wt.rs  mod.rs
rust/src/utils/: audio.rs  audio_utils.rs  lock.rs  macros.rs  math.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_karbeat.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_karbeat.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: version_bumper.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+12 files in other folders)
