[package]
name = "rust_lib_karbeat"
version = "0.1.0-alpha.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.100"
cpal = { version = "0.17.3", features=["jack"] }
env_logger = "0.11.8"
fastrand = "2.3.0"
flutter_rust_bridge = "=2.11.1"
log = "0.4.28"
minimp3 = "0.6.1"
once_cell = "1.21.3"
rodio = "0.22.1"
rtrb = "0.3.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
symphonia = { version = "0.5.5", default-features = false, features = [
    "aac",
    "mp3",
    "flac",
    "wav",
    "ogg",
] }
triple_buffer = "9.0.0"
karbeat_macros = { path = "../karbeat_macros" }
rustfft = "6.4.1"
thiserror = "2.0.17"
dasp = { version = "0.11.0", features = ["all"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.dev]
opt-level = 3
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Optimize for ARM with f64
codegen-units = 1
lto = true
opt-level = 3
