[workspace]
resolver = "2"
members = [
    "karbeat-core",
    "karbeat-dsp",
    "karbeat-host",
    "karbeat-flutter-ffi",
    "karbeat-plugins",
    "karbeat-plugin-api",
    "karbeat-utils",
]

[workspace.dependencies]
karbeat-core = { path = "karbeat-core" }
karbeat-dsp = { path = "karbeat-dsp" }
karbeat_flutter_ffi = { path = "karbeat-flutter-ffi" }
karbeat-host = { path = "karbeat-host" }
karbeat-plugin-api = { path = "karbeat-plugin-api" }
karbeat-plugins = { path = "karbeat-plugins" }
karbeat-utils = { path = "karbeat-utils" }
anyhow = "1.0.100"
cpal = { version = "0.17.3", features = ["jack", "asio"] }
env_logger = "0.11.8"
fastrand = "2.3.0"
flutter_rust_bridge = "=2.11.1"
log = "0.4.28"
minimp3 = "0.6.1"
once_cell = "1.21.3"
rodio = "0.22.1"
rtrb = "0.3.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
symphonia = { version = "0.5.5", default-features = false, features = ["aac", "mp3", "flac", "wav", "ogg"] }
triple_buffer = "9.0.0"
rustfft = "6.4.1"
thiserror = "2.0.17"
dasp = { version = "0.11.0", features = ["all"] }
smallvec = "1.15.1"
hashbrown = "0.16.1"
num-complex = "0.4.6"
parking_lot = "0.12.5"
mimalloc = "0.1.48"

[profile.dev]
opt-level = 3
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
