[workspace]
resolver = "2"
members = [
    "karbeat-core",
    "karbeat-dsp",
    "karbeat-host",
    "karbeat-flutter-ffi",
    "karbeat-plugins",
    "karbeat-plugin-api",
    "karbeat-utils",
]

[workspace.dependencies]
karbeat-core = { path = "karbeat-core" }
karbeat-dsp = { path = "karbeat-dsp" }
karbeat_flutter_ffi = { path = "karbeat-flutter-ffi" }
karbeat-host = { path = "karbeat-host" }
karbeat-plugin-api = { path = "karbeat-plugin-api" }
karbeat-plugins = { path = "karbeat-plugins" }
karbeat-utils = { path = "karbeat-utils" }
anyhow = "1.0.100"
cpal = { version = "0.17.3", features = ["jack", "asio"] }
env_logger = "0.11.8"
fastrand = "2.3.0"
flutter_rust_bridge = "=2.11.1"
log = "0.4.28"
minimp3 = "0.6.1"
once_cell = "1.21.3"
rodio = "0.22.1"
rtrb = "0.3.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
symphonia = { version = "0.5.5", default-features = false, features = [
    "aac",
    "mp3",
    "flac",
    "wav",
    "ogg",
] }
triple_buffer = "9.0.0"
rustfft = "6.4.1"
thiserror = "2.0.17"
dasp = { version = "0.11.0", features = ["all"] }
smallvec = "1.15.1"
hashbrown = { version = "0.16.1", features = ["serde"] }
indexmap = { version = "2.13.0", features = ["serde"] }
num-complex = "0.4.6"
parking_lot = "0.12.5"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
memmap2 = "0.9.10"
bytemuck = "1.25.0"
tempfile = "3.27.0"
zip = "8.5.0"
toml = "1.1.2+spec-1.1.0"
chrono = { version = "0.4.44", features = ["serde"] }
rmp-serde = "1.3.1"
derive_builder = "0.20.2"
hound = "3.5.1"
strum ={ version = "0.28.0", features = ["derive"] }

[profile.dev]
opt-level = 3
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
