[package]
name = "karbeat-core"
version = "0.1.1"
edition = "2021"
description = "Core logic implementation of Karbeat, including audio engine and main business logic"

[dependencies]
karbeat-dsp.workspace = true
karbeat-plugin-api.workspace = true
karbeat-plugins.workspace = true
karbeat-utils.workspace = true
karbeat-plugin-types.workspace = true

anyhow.workspace = true
cpal.workspace = true
fastrand.workspace = true
log.workspace = true
minimp3.workspace = true
once_cell.workspace = true
rtrb.workspace = true
serde.workspace = true
symphonia.workspace = true
triple_buffer.workspace = true
thiserror.workspace = true
smallvec.workspace = true
hashbrown.workspace = true
rodio.workspace = true
flutter_rust_bridge.workspace = true
dasp.workspace = true
parking_lot.workspace = true
uuid.workspace = true
memmap2.workspace = true
bytemuck.workspace = true
tempfile.workspace = true
indexmap.workspace = true
toml.workspace = true
rmp-serde.workspace = true
zip.workspace = true
chrono.workspace = true
hound.workspace = true
derive_builder.workspace = true
strum.workspace = true
serde_json.workspace = true
wide.workspace = true

[lints]
workspace = true