[package]
name = "karbeat-dsp"
version = "0.1.1"
edition = "2021"
description = "DSP algorithms and utilities for Karbeat"

[dependencies]
dasp.workspace = true
rustfft.workspace = true
num-complex.workspace = true
log.workspace = true
serde.workspace = true
fastrand.workspace = true
derive_builder.workspace = true
karbeat-macros.workspace = true
karbeat-plugin-types.workspace = true