[package]
name = "karbeat-host"
version = "0.1.1"
edition = "2021"
description = "3rd-party plugin hosting implementation for Karbeat, including VST3, LV2, and CLAP support"

[dependencies]
karbeat-core.workspace = true
karbeat-plugin-api.workspace = true
log.workspace = true

[lints]
workspace = true
