[package]
name = "karbeat-plugin-api"
version = "0.1.1"
edition = "2021"
description = "Plugin API for Karbeat"

[dependencies]
karbeat-dsp.workspace = true
karbeat-utils.workspace = true
karbeat-macros.workspace = true

anyhow.workspace = true
serde.workspace = true
log.workspace = true
indexmap.workspace = true
smallvec.workspace = true
serde_json.workspace = true
karbeat-plugin-types.workspace = true

[lints]
workspace = true