[package]
name = "karbeat-plugins"
version = "0.1.1"
edition = "2021"
description = "Collection of first-party plugins for Karbeat"

[dependencies]
karbeat-dsp.workspace = true
karbeat-plugin-api.workspace = true
karbeat-utils.workspace = true
karbeat-plugin-types.workspace = true
karbeat-macros.workspace = true

log.workspace = true
serde.workspace = true
dasp.workspace = true
fastrand.workspace = true
hashbrown.workspace = true
smallvec.workspace = true
serde_json.workspace = true
