[package]
name = "karbeat-utils"
version = "0.1.1"
edition = "2021"
description = "Auxiliary utilities for Karbeat"

[dependencies]
log.workspace = true
serde.workspace = true
thiserror.workspace = true
dasp.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
serde_json.workspace = true
